# ambilight

./: .gitignore  README.md  pyproject.toml  start-macos.command  start-windows.bat
scripts/: discover_per_led.py  probe_descriptor.py  probe_live_capture.py  smoke_open.py  test_static.py
src/ambilight/: __init__.py  capture.py  cli.py  device.py  geometry.py  idle.py  protocol.py  smooth.py
